# libswervedrive

./: .gitignore  .travis.yml  CMakeLists.txt  Makefile  setup.py
.circleci/: config.yml
include/libswervedrive/: chassis.h  controller.h  estimator.h  kinematic_model.h  time_scaler.h  types.h
src/: CMakeLists.txt  chassis.cpp  controller.cpp  estimator.cpp  kinematic_model.cpp  python_bindings.cpp  time_scaler.cpp
src/tests/: CMakeLists.txt  CMakeLists.txt.in  chassis_fixture.h  test.cpp  test_chassis.cpp  test_controller.cpp  test_estimator.cpp  test_kinematic_model.cpp  test_time_scaler.cpp
swervedrive/icr/: __init__.py  controller.py  estimator.py  estimator_pythran.py  estimator_pythran.pythran  kinematicmodel.py  timescaler.py  utils.py
tests/: helpers.py  plot_modules.py  profile_estimator_pythran.py  test_icrcontroller.py  test_icrestimator.py  test_kinematicmodel.py  test_movement.py
tests/robotpy/: physics.py  robot.py
tests/robotpy/components/: swerve.py
tests/robotpy/sim/: config.json
